--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^4.3.8",
     "chai-http": "^4.4.0",
+    "eslint": "^8.49.0",
     "mocha": "^10.2.0",
     "sinon": "^15.2.0"
   }
