--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "mocha --recursive --exit"
+    "test": "mocha --recursive --exit",
+    "lint": "eslint ."
   },
   "author": "vascoII",
   "license": "ISC",
