--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "mocha --recursive --exit",
+    "test": "NODE_ENV=test mocha --recursive --exit",
+    "test:unit": "mocha test/unit/**/*test.js --recursive --exit",
+    "test:integration": "NODE_ENV=test mocha --recursive test/integration --exit",
     "lint": "eslint ."
   },
   "author": "vascoII",
@@ -18,7 +20,8 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.8",
